; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_difftool.c_checkout_path.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_difftool.c_checkout_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.checkout = type { i32 }
%struct.cache_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.object_id*, i8*, %struct.checkout*)* @checkout_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_path(i32 %0, %struct.object_id* %1, i8* %2, %struct.checkout* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.checkout*, align 8
  %9 = alloca %struct.cache_entry*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.checkout* %3, %struct.checkout** %8, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.object_id*, %struct.object_id** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call %struct.cache_entry* @make_transient_cache_entry(i32 %11, %struct.object_id* %12, i8* %13, i32 0)
  store %struct.cache_entry* %14, %struct.cache_entry** %9, align 8
  %15 = load %struct.cache_entry*, %struct.cache_entry** %9, align 8
  %16 = load %struct.checkout*, %struct.checkout** %8, align 8
  %17 = call i32 @checkout_entry(%struct.cache_entry* %15, %struct.checkout* %16, i32* null, i32* null)
  store i32 %17, i32* %10, align 4
  %18 = load %struct.cache_entry*, %struct.cache_entry** %9, align 8
  %19 = call i32 @discard_cache_entry(%struct.cache_entry* %18)
  %20 = load i32, i32* %10, align 4
  ret i32 %20
}

declare dso_local %struct.cache_entry* @make_transient_cache_entry(i32, %struct.object_id*, i8*, i32) #1

declare dso_local i32 @checkout_entry(%struct.cache_entry*, %struct.checkout*, i32*, i32*) #1

declare dso_local i32 @discard_cache_entry(%struct.cache_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
